<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wolfies Dice Roller</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello, Wolfies!</string>
    <string name="btext_D4">D4</string>
    <string name="btext_D6">D6</string>
    <string name="btext_D8">D8</string>
    <string name="btext_D10">D10</string>
    <string name="btext_D12">D12</string>
    <string name="btext_D20">D20</string>
    <string name="title_activity_abstract">AbstractActivity</string>
    <string name="btext_Roll">Roll!</string>
    <string name="btext_Clear">Clear</string>
    <string name="btext_Save">Save</string>
    <string name="btext_History">Saved Rolls</string>
    <string name="ftext_reroll">Re-roll on Max</string>
    <string name="default_total">Total: 0</string>

</resources>